--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next": "^13.3.4",
     "next-redux-wrapper": "^8.1.0",
     "react": "^18.2.0",
+    "react-content-loader": "^6.2.1",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "styled-components": "^6.0.0-rc.1",
