--- a/package.json
+++ b/package.json
@@ -9,23 +9,40 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ckeditor/ckeditor5-dev-utils": "^38.0.1",
     "@emotion/react": "^11.10.8",
     "@emotion/styled": "^11.10.8",
     "@material-ui/core": "^4.12.4",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.12.3",
     "@reduxjs/toolkit": "^1.9.5",
+    "@tiptap/extension-text-align": "^2.0.3",
+    "@tiptap/extension-underline": "^2.0.3",
+    "@tiptap/pm": "^2.0.3",
+    "@tiptap/react": "^2.0.3",
+    "@tiptap/starter-kit": "^2.0.3",
+    "@zeit/next-css": "^1.0.1",
     "axios": "^1.4.0",
     "bootstrap": "^5.2.3",
+    "ckeditor5-build-classic": "^1.0.0",
+    "ckeditor5-custom-build": "file:ckeditor5",
     "cors": "^2.8.5",
     "formik": "^2.2.9",
+    "html-react-parser": "^4.0.0",
     "next": "^13.3.4",
+    "next-images": "^1.8.5",
     "next-redux-wrapper": "^8.1.0",
+    "notistack": "^3.0.1",
+    "programize": "file:",
+    "raw-loader": "^4.0.2",
     "react": "^18.2.0",
+    "react-confetti": "^6.1.0",
     "react-content-loader": "^6.2.1",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.9.0",
     "react-redux": "^8.0.5",
     "styled-components": "^6.0.0-rc.1",
+    "typewriter-effect": "^2.20.1",
     "yup": "^1.1.1"
   }
 }
