Building exam and dashboard section

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.10.8",
     "@material-ui/core": "^4.12.4",
     "@mui/icons-material": "^5.11.16",
+    "@mui/lab": "^5.0.0-alpha.137",
     "@mui/material": "^5.12.3",
     "@reduxjs/toolkit": "^1.9.5",
     "@tiptap/extension-text-align": "^2.0.3",
@@ -27,6 +28,8 @@
     "ckeditor5-build-classic": "^1.0.0",
     "ckeditor5-custom-build": "file:ckeditor5",
     "cors": "^2.8.5",
+    "date-fns": "^2.30.0",
+    "echarts": "^5.4.3",
     "formik": "^2.2.9",
     "html-react-parser": "^4.0.0",
     "next": "^13.3.4",
@@ -41,6 +44,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
     "react-redux": "^8.0.5",
+    "simplebar-react": "^3.2.4",
     "styled-components": "^6.0.0-rc.1",
     "sweetalert": "^2.1.2",
     "typewriter-effect": "^2.20.1",
